# tos-scanner

./: README  README.md
client/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.common.js  webpack.dev.js  webpack.prod.js
client/src/: index.html  index.ts
client/src/component/: app.vue
client/src/types/: vue.d.ts
engine/: README.md  analyzer.py  file  pyproject.toml
engine/test/tos/: facebook.txt
server/: README.md  package-lock.json  package.json  tsconfig.json  tsfmt.json  tslint.json
server/src/: index.ts
server/src/api/: index.ts  upload.ts
