[tool.poetry]
name = "tos-scanner-engine"
version = "0.1.0"
description = ""
authors = ["Denize Ignacio <denizeignacio@gmail.com>", "Omshi Samal <omshisamal72@gmail.com>", "Ibiyemi Abiodun <laptou@users.noreply.github.com>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
acora = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
